@@ -14,6 +14,8 @@ Features added
 * C++ type alias support (e.g., ``.. type:: T = int``)
 * C++ template support for classes, functions, type aliases, and variables (#1729, #1314).
 * C++, added new scope management directives ``namespace-push`` and ``namespace-pop``.
+* Intersphinx: Added support for fetching Intersphinx inventories with URLs
+  using HTTP basic auth
 
 Bugs fixed
 ----------
